--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
